<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FishSellerUI"
    android:orientation="vertical"
    android:background="#fff">

    <TextView
        android:id="@+id/text_fishmob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/fish_sellerui"
        android:textColor="#6B880D0D"
        android:textSize="90sp"
        android:textStyle="italic"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:background="@drawable/logo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image"
        android:layout_marginStart="20dp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="15dp"
        android:text="@string/description"
        android:textColor="#550202"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.312"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp" />
    <Button
        android:id="@+id/btn_proceeded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>


</LinearLayout>