<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".RegistrationActivity"
    android:orientation="vertical"
    android:background="@drawable/gradientbackground"
    android:padding="20dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        android:textSize="45sp"
        android:transitionName="welcome_name"
        />

    <TextView
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/startmessage"
        android:textSize="20sp"
        android:transitionName="text_name"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterYournames"
            android:transitionName="btnlog_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxt_fullnames"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_round"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phonenumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:transitionName="btnlog_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxt_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_round"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yourAccountname"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            android:transitionName="btnlog_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxt_emailAcount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_round"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            android:transitionName="btnlog_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
          >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxt_Pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_round"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordconf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            app:passwordToggleEnabled="true"
            android:transitionName="btnlog_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxt_Conpwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_round"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="#0C1D35"
        android:text="@string/register"
        android:textColor="#05ff9a"
        android:textSize="28sp"
        android:transitionName="btnlog_name"
        />

    <Button
        android:id="@+id/btn_Sign_In"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#00000000"
        android:text="@string/signInbutton"
        android:textSize="19sp"
        android:transitionName="signUp_name"/>


</LinearLayout>