<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CallViewButton">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/relativeonecolor"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="173dp"
            android:layout_height="109dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="112dp"
            android:layout_marginRight="112dp"
            android:layout_marginBottom="160dp"
            app:srcCompat="@drawable/user"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/meshack"
            android:textSize="28sp"
            android:textStyle="bold"
             />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:ems="10"
            android:inputType="phone"
            android:text= "@string/_255753563434"
            android:textSize="26sp"
            android:textStyle="bold"
             />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="359dp"
        android:background="@drawable/relativetwocolor"
        >

        <Button
            android:id="@+id/button3"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="49dp"
            android:layout_marginRight="49dp"
            android:layout_marginBottom="46dp"
            android:text="@string/buttoncall"
            android:background="@drawable/edittext_round"
            />
    </RelativeLayout>

</LinearLayout>