<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboardActivity"
    tools:layout_editor_absoluteY="25dp"
     android:background="@drawable/fatest_fish">

    <Button
        android:id="@+id/btn_customer"
        android:layout_width="267dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:layout_marginBottom="32dp"
        android:text="@string/customer"
        app:layout_constraintBottom_toTopOf="@+id/btn_fish_keeper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_fish_keeper"
        android:layout_width="267dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:layout_marginBottom="32dp"
        android:text="@string/fish_keeper"
        app:layout_constraintBottom_toTopOf="@+id/btn_fish_seller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_customer" />

    <Button
        android:id="@+id/btn_fish_seller"
        android:layout_width="267dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:layout_marginBottom="204dp"
        android:text="@string/fish_seller"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_fish_keeper" />

</androidx.constraintlayout.widget.ConstraintLayout>